 		• remove “n_memfd_cache” field;
 		• remove “kdbus_buffer” field;
 		• remove “fake_creds” field;
 		• add “is_monitor” field;
 		• add “accept_fd” field;
 	- struct bus_body_part:
 		• remove “memfd” field;
 	- struct sd_bus_message:
 		• remove “release_kdbus” field;
 		• remove “free_kdbus” field;
 		• remove “kdbus” field;
 		• remove “monotonic” field;
 		• remove “realtime” field;
 	- remove functions:
 		• bus_message_map_properties_changed;
 		• sd_bus_open_system_container;
 		• bus_event_loop_with_idle;
 		• sd_bus_try_close;
 		• bus_remove_match_internal_kernel;
 		• bus_add_match_internal_kernel;
 		• sd_bus_message_get_realtime_usec;
 		• sd_bus_message_get_seqnum;
 		• sd_bus_message_get_monotonic_usec;
 	- remove “BusTransport” enum;
 	- allow naming event sources;
 	- use event source name rather than address in debug messages;
 	- name event sources used in libraries;
 * loginctl:
 	- remove “machine” argument option;
 * systemd-analyze:
 	- remove “machine” argument option;
 * systemd-run:
 	- remove “machine” argument option;
 * kdbus:
 	- remove “sd-resolve” module;
 	- remove “sd-utf8” module;
 	- remove “bus-container” module;
 	- remove “bus-kernel” module;
 * systemctl:
 	- remove “list-machines” command;
 	- remove “recursive” argument option;
 	- remove “machine” argument option;
 	- filter templates from restartable units in bash-completion;
 * units:
 	- remove “org.freedesktop.login1” busname;
 	- remove “org.freedesktop.systemd1” busname;
 	- remove “busnames” target;
 * po:
 	- update Russian translation;
 	- update French translation;
 * tests:
 	- remove “test-resolve” test;
 	- remove “test-bus-kernel” test;
 	- remove “test-bus-kernel-bloom” test;
 	- remove “test-bus-kernel-benchmark” test;
 * build:
 	- remove USER_BUSNAMES_TARGET_WANTS unit path;
 	- remove BUSNAMES_TARGET_WANTS unit path;
 * remove busname unit type;

   systemd (214.9)
~~~~~~~
 * core: